--- a/Movie Review Ranking and Sentiment Prediction.ipynb
+++ b/Movie Review Ranking and Sentiment Prediction.ipynb
@@ -36,7 +36,7 @@
     "def Word2Vec(vector_size,training_alg):\n",
     "    logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.INFO)\n",
     "    model = gensim.models.Word2Vec(size = vector_size,sg=training_alg)\n",
-    "    sentences = gensim.models.word2vec.LineSentence(\"reviews_all_2306.txt\")\n",
+    "    sentences = gensim.models.word2vec.LineSentence(\"./corpus/reviews_all_2306.txt\")\n",
     "    model.build_vocab(sentences,total_examples=len(sentences))\n",
     "    model.train(sentences)\n",
     "\n",
@@ -58,7 +58,7 @@
    "source": [
     "def FromExcelToArray():\n",
     "\n",
-    "    WBook = xlrd.open_workbook(\"ReviewsAndRatings_all_19_06.xls\")\n",
+    "    WBook = xlrd.open_workbook(\"./dataset/ReviewsAndRatings_all_19_06.xls\")\n",
     "    WSheets = WBook.sheets()\n",
     "    ReviewWS,RatingsWS = WSheets\n",
     "\n",
